<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>succulence_rover_ros</name>
  <version>0.1.0</version>
  <description>SLAM and navigation package for the Succulence Rover — Algorithmic Robotics lab</description>
  <maintainer email="maleen.jayasuriya@canberra.edu.au">Maleen Jayasuriya</maintainer>
  <license>MIT</license>

  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Python scientific computing -->
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>

  <!-- Testing -->
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
